src/main/java/com/example/YNN/error/GlobalExceptionHandler.java
package com.example.YNN.error;

import org.springframework.web.bind.annotation.ControllerAdvice;
import org.springframework.web.bind.annotation.RestControllerAdvice;

@ControllerAdvice
@RestControllerAdvice
public class GlobalExceptionHandler {
}
